--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "bcrypt": "^6.0.0",
     "chalk": "^5.5.0",
     "hono": "^4.8.12",
+    "hono-rate-limit": "^1.0.2",
+    "hono-rate-limiter": "^0.4.2",
     "jsonwebtoken": "^9.0.2"
   }
 }
